--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -23803,6 +23803,20 @@
   url       = {https://plato.stanford.edu/entries/heraclitus/},
 }
 
+@InCollection{Gramsch2016,
+  author    = {Gramsch, R. and MacCarron, M. and MacCarron, P. and Yose, J.},
+  title     = {Medieval Historical, Hagiographical and Biographical Networks},
+  booktitle = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
+  publisher = {Springer},
+  year      = {2016},
+  series    = {Understanding Complex Systems},
+  chapter   = {4},
+  pages     = {45-69},
+  doi       = {10.1007/978-3-319-39445-9_4},
+  owner     = {Vincent},
+  timestamp = {2024.03.08},
+}
+
 @InProceedings{Grandjean2013,
   author    = {Grandjean, M.},
   title     = {Comparing the relational structure of the {Gospels}. Network Analysis as a tool for biblical sciences},
@@ -28534,19 +28548,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://github.com/hzjken/character-network},
   owner        = {Vincent},
   timestamp    = {2022.06.05},
-}
-
-@Article{Hubert1985,
-  author    = {Hubert, L. and Arabie, P.},
-  title     = {Comparing partitions},
-  journal   = {Journal of Classification},
-  year      = {1985},
-  volume    = {2},
-  number    = {1},
-  pages     = {193-218},
-  doi       = {10.1007/BF01908075},
-  owner     = {Vincent},
-  timestamp = {2010.06.03},
 }
 
 @Article{Hubert1985,
