fixed issue in last addition

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -68440,6 +68440,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.04.09},
 }
 
+@Article{Zaslavskiy2009,
+  author    = {Zaslavskiy, M. and Bach, F. and Vert, J.-P.},
+  title     = {A Path Following Algorithm for the Graph Matching Problem},
+  journal   = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  year      = {2009},
+  volume    = {31},
+  number    = {12},
+  pages     = {2227-2242},
+  doi       = {10.1109/tpami.2008.245},
+  owner     = {Vincent},
+  timestamp = {2023.04.03},
+}
+
 @Article{Zawislak2003,
   author    = {Zawiślak, S. and Frej, G.},
   title     = {An influence of parameters of the evolutionary algorithm applied for the graph k-partitioning problem},
