--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5433,6 +5433,18 @@
   timestamp    = {2016.02.23},
 }
 
+@Article{Berche2009,
+  author    = {Berche, B. and von Ferber, C. and Holovatch, T. and Holovatch, Y.},
+  title     = {Resilience of public transport networks against attacks},
+  journal   = {European Physical Journal B},
+  year      = {2009},
+  volume    = {71},
+  pages     = {125-137},
+  doi       = {10.1140/epjb/e2009-00291-3},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Article{Berelson1946,
   author    = {Berelson, B. and Salter, P. J.},
   title     = {Majority and Minority Americans: An Analysis of Magazine Fiction},
@@ -6767,6 +6779,19 @@
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {http://www.dialog-21.ru/digests/dialog2014/materials/pdf/BodrovaAABocharovVV.pdf},
+}
+
+@Article{Boerner2012,
+  author    = {Börner, K. and Klavans, R. and Patek, M. and Zoss, A. M. and Biberstine, J. R. and Light, R. P. and Larivière, V. and Boyack, K. W.},
+  title     = {Design and Update of a Classification System: The UCSD Map of Science},
+  journal   = {PLoS ONE},
+  year      = {2012},
+  volume    = {7},
+  number    = {7},
+  pages     = {e39464},
+  doi       = {10.1371/journal.pone.0039464},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
 }
 
 @InProceedings{Boerner2023,
@@ -11739,6 +11764,19 @@
   url       = {https://books.google.fr/books?id=TaDHDQAAQBAJ},
 }
 
+@Article{Chinard1923,
+  author    = {Chinard, G.},
+  title     = {Jefferson and Ossian},
+  journal   = {Modern Language Notes},
+  year      = {1923},
+  volume    = {38},
+  number    = {4},
+  pages     = {201},
+  doi       = {10.2307/2914681},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @TechReport{Chinchor1999,
   author      = {Chinchor, N. and Brown, E. and Ferro, L. and Patty, R.},
   title       = {Named Entity Recognition Task Definition},
@@ -14979,6 +15017,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://search.proquest.com/openview/04a4e6f1e83cacb72fdbfa73b64375e4/1?pq-origsite=gscholar&cbl=18750&diss=y},
+}
+
+@InCollection{Degategno1991,
+  author    = {Degategno, P. J.},
+  title     = {`The source of daily and exalted pleasure': Jefferson Reads the Poems of Ossian},
+  booktitle = {Ossian Revisited},
+  publisher = {Edinburgh University Press},
+  year      = {1991},
+  pages     = {98},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://www.academia.edu/23679548/Thomas_Jeffersons_Ossianic_Romance},
 }
 
 @InProceedings{DegliEsposti2023,
@@ -21479,6 +21529,17 @@
   timestamp = {2019.04.09},
 }
 
+@Book{Galam2012,
+  title     = {Sociophysics: A Physicist's Modeling of Psycho-political Phenomena},
+  publisher = {Springer},
+  year      = {2012},
+  author    = {Galam, S.},
+  series    = {Understanding Complex Systems},
+  doi       = {10.1007/978-1-4614-2032-3},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Article{Gale1962,
   author    = {Gale, D. and Shapley, L. S.},
   title     = {College Admissions and the Stability of Marriage},
@@ -22080,6 +22141,18 @@
   doi       = {10.1080/09540091.2012.664122},
   owner     = {Vincent},
   timestamp = {2023.03.23},
+}
+
+@Article{Gaskill1990,
+  author    = {Gaskill, H.},
+  title     = {What Did James Macpherson Really Leave on Display at his Publisher's Shop in 1762?},
+  journal   = {Scottish Gaelic Studies},
+  year      = {1990},
+  volume    = {16},
+  pages     = {72},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://www.degruyter.com/document/doi/10.1515/9781474468374-035/html?lang=en&srsltid=AfmBOopymsM2u2veJbgVXKuV4hALzb9gR1UZdbohLSuZ-fdOezogdxey},
 }
 
 @Book{Gaskill1991,
@@ -26709,6 +26782,19 @@
   url       = {https://www.logos.com/product/49615/the-book-of-acts-in-the-setting-of-hellenistic-history},
 }
 
+@Article{Hench1928,
+  author    = {Hench, A. L.},
+  title     = {Jefferson and Ossian},
+  journal   = {Modern Language Notes},
+  year      = {1928},
+  volume    = {43},
+  number    = {8},
+  pages     = {537},
+  doi       = {10.2307/2914415},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Article{Henderson1989,
   author    = {Henderson, D. A. and Denison, D. R.},
   title     = {Stepwise Regression in Social and Psychological Research},
@@ -28940,6 +29026,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.cambridge.org/core/books/shakespearean-stage-space/4B30F2E4F009D7C3C67C0EFB8A344205},
 }
 
+@Article{Iggers1959,
+  author    = {Iggers, Georg G.},
+  title     = {Further Remarks about Early Uses of the Term ``Social Science''},
+  journal   = {Journal of the History of Ideas},
+  year      = {1959},
+  volume    = {20},
+  number    = {3},
+  pages     = {433},
+  doi       = {10.2307/2708121},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Book{Iglesias2005,
   title     = {Writing for Emotional Impact},
   publisher = {Wingspan},
@@ -30480,6 +30579,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1215/01642472-7145658},
   owner     = {Vincent},
   timestamp = {2020.12.01},
+}
+
+@Book{Johnson2018a,
+  title     = {Anxiety and the Equation: Understanding Boltzmann's Entropy},
+  publisher = {MIT Press},
+  year      = {2018},
+  author    = {Johnson, E.},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://mitpress.mit.edu/9780262546614/anxiety-and-the-equation/},
 }
 
 @Book{Johnson-Woods2010,
@@ -32063,6 +32172,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   publisher = {Springer},
   series    = {Understanding Complex Systems},
   timestamp = {2020.11.17},
+}
+
+@Article{Kenna2017b,
+  author    = {Kenna, R. and Mryglod, O. and Berche, B.},
+  title     = {A scientists' view of scientometrics: Not everything that counts can be counted},
+  journal   = {Condensed Matter Physics},
+  year      = {2017},
+  volume    = {20},
+  number    = {1},
+  pages     = {13803},
+  doi       = {10.5488/cmp.20.13803},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
 }
 
 @InCollection{Kenna2022,
@@ -35961,6 +36083,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2022.08.30},
   url       = {https://www.gutenberg.org/ebooks/5678},
+}
+
+@Book{Leavis2013,
+  title     = {Two Cultures?: The Significance of C. P. Snow},
+  publisher = {Cambridge University Press},
+  year      = {2013},
+  author    = {Leavis, F. R. and Collini, S.},
+  doi       = {10.1017/cbo9781107337169},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
 }
 
 @Article{Leavitt1951,
@@ -40509,6 +40641,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2022.11.28},
 }
 
+@Article{Manning1997,
+  author    = {Manning, S.},
+  title     = {Why Does It Matter that Ossian Was Thomas Jefferson's Favorite Poet?},
+  journal   = {Symbiosis},
+  year      = {1997},
+  volume    = {1},
+  number    = {2},
+  pages     = {230},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://www.academia.edu/23679548/Thomas_Jeffersons_Ossianic_Romance},
+}
+
 @Book{Manning1999,
   title     = {Foundations of Statistical Natural Language Processing},
   publisher = {MIT Press},
@@ -41853,6 +41998,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://www.worldcat.org/title/irish-annals-their-genesis-evolution-and-history/oclc/214309762},
 }
 
+@InCollection{McCarthy2016,
+  author    = {Mc Carthy, D.},
+  title     = {Analysing and Restoring the Chronology of the Irish Annals},
+  booktitle = {Maths Meets Myths: Quantitative Approaches to Ancient Narratives},
+  publisher = {Springer},
+  year      = {2016},
+  series    = {Understanding Complex Systems},
+  pages     = {177-194},
+  doi       = {10.1007/978-3-319-39445-9_10},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Article{McCarthy2018,
   author    = {McCarthy, M. and Curley, D.},
   title     = {Exploring the nature of the {F}ráoch saga - An examination of associations with the legendary warrior on Mag naí},
@@ -42221,6 +42379,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://tspace.library.utoronto.ca/handle/1807/33818},
+}
+
+@Article{McLaughlin1993,
+  author    = {McLaughlin, J.},
+  title     = {Jefferson, Poe, and Ossian},
+  journal   = {Eighteenth-Century Studies},
+  year      = {1993},
+  volume    = {26},
+  number    = {4},
+  pages     = {627},
+  doi       = {10.2307/2739486},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
 }
 
 @InProceedings{McMinn_2013,
@@ -43384,6 +43555,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2022.07.08},
   url       = {https://www.worldcat.org/title/on-narrative/oclc/442095717},
+}
+
+@InCollection{Mitchell2012,
+  author    = {Mitchell, S.},
+  title     = {Macpherson, Ossian, and Homer's Iliad},
+  booktitle = {Ossian and National Epic},
+  publisher = {Peter Lang},
+  year      = {2012},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://research.birmingham.ac.uk/en/publications/macpherson-ossian-and-homers-iliad},
 }
 
 @Article{Mitchell2016,
@@ -46593,6 +46775,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2021.12.27},
 }
 
+@Article{Noble2018,
+  author    = {Noble, A. E. and Rosenstock, T. S. and Brown, P. H. and Machta, J. and Hastings, A.},
+  title     = {Spatial patterns of tree yield explained by endogenous forces through a correspondence between the Ising model and ecology},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2018},
+  volume    = {115},
+  number    = {8},
+  pages     = {1825–1830},
+  doi       = {10.1073/pnas.1618887115},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Article{Nogueira2019,
   author    = {Nogueira, R. and Cho, K.},
   title     = {Passage Re-ranking with {BERT}},
@@ -48948,6 +49143,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.20314/als.af2dc34792},
   owner     = {Vincent},
   timestamp = {2024.06.01},
+}
+
+@Article{Perkins2018,
+  author    = {Perkins, G. D. and Ji, C. and Deakin, C. D. and Quinn, T. and Nolan, J. P. and Scomparin, C. and Regan, S. and Long, J. and Slowther, A. and Pocock, H. and Black, J. J. M. and Moore, F. and Fothergill, R. T. and Rees, N. and O'Shea, L. and Docherty, M. and Gunson, I. and Han, K. and Charlton, K. and Finn, J. and Petrou, S. and Stallard, N. and Gates, S. and Lall, R.},
+  title     = {A Randomized Trial of Epinephrine in Out-of-Hospital Cardiac Arrest},
+  journal   = {New England Journal of Medicine},
+  year      = {2018},
+  volume    = {379},
+  number    = {8},
+  pages     = {711-721},
+  doi       = {10.1056/nejmoa1806842},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
 }
 
 @Article{Peron2015,
@@ -58203,9 +58411,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   publisher = {Cambridge University Press},
   year      = {1959},
   author    = {Snow, C. P.},
+  doi       = {10.1017/cbo9781139196949},
   owner     = {Vincent},
   timestamp = {2019.04.02},
-  url       = {https://www.cambridge.org/core/books/two-cultures/506914BF3ADDD439EE8100FD2882D9DB},
+}
+
+@Book{Snow1963,
+  title     = {The Two Cultures: And a Second Look: An Expanded Version of the Two Cultures and the Scientific Revolution},
+  publisher = {Cambridge University Press},
+  year      = {1963},
+  author    = {Snow, C. P.},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://books.google.ie/books/?id=QEjBNRdp1CkC},
 }
 
 @Article{Snowden2002,
@@ -61117,6 +61335,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1080/08838151.2019.1698233},
   owner     = {Vincent},
   timestamp = {2022.11.28},
+}
+
+@Article{Tegmark2007,
+  author    = {Tegmark, M.},
+  title     = {The Mathematical Universe},
+  journal   = {Foundations of Physics},
+  year      = {2007},
+  volume    = {38},
+  number    = {2},
+  pages     = {101-150},
+  doi       = {10.1007/s10701-007-9186-9},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
 }
 
 @Article{Tehrani2013,
@@ -65764,6 +65995,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.04.12},
 }
 
+@Article{Wiesner2018,
+  author    = {Wiesner, K. and Birdi, A. and Eliassi-Rad, T. and Farrell, H. and Garcia, D. and Lewandowsky, S. and Palacios, P. and Ross, D. and Sornette, D. and Thébault, K.},
+  title     = {Stability of democracies: a complex systems perspective},
+  journal   = {European Journal of Physics},
+  year      = {2018},
+  volume    = {40},
+  number    = {1},
+  pages     = {014002},
+  doi       = {10.1088/1361-6404/aaeb4d},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+}
+
 @Article{Wiessner2014,
   author    = {Wiessner, P. W.},
   title     = {Embers of society: Firelight talk among the Ju'hoansi Bushmen},
@@ -66300,6 +66544,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.3233/SW-150181},
   owner     = {Vincent},
   timestamp = {2020.12.19},
+}
+
+@Book{Wohlleben2016,
+  title     = {The Hidden Life of Trees},
+  publisher = {William Collins},
+  year      = {2016},
+  author    = {Wohlleben, P.},
+  owner     = {Vincent},
+  timestamp = {2025.01.09},
+  url       = {https://www.dubraybooks.ie/product/hidden-life-of-trees-pb-9780008218430},
 }
 
 @Article{Wojcik2023,
