--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -10226,6 +10226,16 @@
   url       = {https://books.google.fr/books?id=Ot6v3YRgTm0C},
 }
 
+@Book{Carey2018,
+  title     = {The Mythological Cycle of Medieval Irish Literature},
+  publisher = {Cork Studies in Celtic Literatures},
+  year      = {2018},
+  author    = {Carey, J.},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://uccshop.ie/shop/mythological-cycle-medieval-irish-literature/},
+}
+
 @Article{Carley1994,
   author    = {Carley, K.},
   title     = {Extracting culture through textual analysis},
@@ -10308,6 +10318,20 @@
   doi       = {10.1163/15685373-12340009},
   owner     = {Vincent},
   timestamp = {2022.08.30},
+}
+
+@InCollection{Carney2018,
+  author    = {Carney, J.},
+  title     = {Psycho-Cosmology: Mental Mapping in Táin Bó Cuailnge},
+  booktitle = {Celtic Myth in the 21st Century: The Gods and their Stories in a Global Perspective},
+  publisher = {University of Wales Press},
+  year      = {2018},
+  series    = {New Approaches to Celtic Religion and Mythology},
+  chapter   = {12},
+  pages     = {163-178},
+  doi       = {10.2307/jj.14491648.19},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
 }
 
 @InProceedings{Carreira2017,
@@ -15614,6 +15638,19 @@
   timestamp = {2020.03.24},
 }
 
+@Article{Dhui2013,
+  author    = {d'Huy, J.},
+  title     = {A phylogenetic approach of mythology and its archaeological consequences},
+  journal   = {Rock Art Research},
+  year      = {2013},
+  volume    = {30},
+  number    = {1},
+  pages     = {115-118},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://search.informit.org/doi/abs/10.3316/INFORMIT.487068424704224},
+}
+
 @Article{DHuy2013,
   author    = {D'Huy, Julien},
   title     = {A phylogenetic approach of mythology and its archaeological consequences},
@@ -16973,6 +17010,18 @@
   timestamp = {2015.06.14},
 }
 
+@Article{Dunbar1975,
+  author    = {Dunbar, R. I. M. and Dunbar, P.},
+  title     = {Social dynamics of gelada baboons},
+  journal   = {Contributions to primatology},
+  year      = {1975},
+  volume    = {6},
+  pages     = {1-157},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://www.semanticscholar.org/paper/Social-dynamics-of-gelada-baboons.-Dunbar-Dunbar/4cb4cf96d7eae616393ea70aa8d5841e66119541},
+}
+
 @Article{Dunbar1992,
   author    = {Dunbar, R. I. M.},
   title     = {Neocortex size as a constraint on group size in primates},
@@ -18160,6 +18209,16 @@
   owner     = {Vincent},
   timestamp = {2019.03.23},
   url       = {https://dl.acm.org/citation.cfm?id=142741},
+}
+
+@Book{Ellis1991,
+  title     = {A dictionary of Irish mythology},
+  publisher = {Oxford University Press},
+  year      = {1991},
+  author    = {Ellis, P. B.},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://archive.org/details/dictionaryofiris0000elli},
 }
 
 @Book{Ellis1999,
@@ -29834,6 +29893,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.08.06},
 }
 
+@PhdThesis{Janickyj2024,
+  author    = {Janickyj, M.},
+  title     = {Textual Analysis with Natural Language Processing},
+  school    = {Coventry University},
+  year      = {2024},
+  type      = {PhD Thesis},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://pureportal.coventry.ac.uk/en/studentTheses/textual-analysis-with-natural-language-processing},
+}
+
 @InCollection{Jannidis2013,
   author    = {Jannidis, F.},
   title     = {Character},
@@ -32369,6 +32439,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.11.28},
 }
 
+@Article{Kestemont2022,
+  author    = {Kestemont, M. and Karsdorp, F. and de Bruijn, E. and Driscoll, M. and Kapitan, K. A. and Ó Macháin, P. and Sawyer, D. and Sleiderink, R. and Chao, A.},
+  title     = {Forgotten books: The application of unseen species models to the survival of culture},
+  journal   = {Science},
+  year      = {2022},
+  volume    = {375},
+  number    = {6582},
+  pages     = {765-769},
+  doi       = {10.1126/science.abl7655},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+}
+
 @Article{Khadilkar2022,
   author    = {Khadilkar, K. and KhudaBukhsh, A. R. and Mitchell, T. M.},
   title     = {Gender bias, social bias, and representation in {Bollywood} and {Hollywood}},
@@ -34036,7 +34119,7 @@ https://hkim1596.github.io/shakespearean_character_network},
   year      = {2003},
   volume    = {31},
   number    = {2},
-  pages     = {163},
+  pages     = {163-166},
   doi       = {10.1130/0091-7613(2003)031<0163:haaats>2.0.co;2},
   owner     = {Vincent},
   timestamp = {2019.04.02},
@@ -37174,6 +37257,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://muse.jhu.edu/article/602258/pdf},
 }
 
+@Article{Levi-Strauss1955,
+  author    = {Levi-Strauss, C.},
+  title     = {The Structural Study of Myth},
+  journal   = {Journal of American Folklore},
+  year      = {1955},
+  volume    = {68},
+  number    = {270},
+  pages     = {428},
+  doi       = {10.2307/536768},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+}
+
 @InCollection{Levi-Strauss1963,
   author    = {Levi-Strauss, C.},
   title     = {The structural study of myth},
@@ -39779,6 +39875,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2022.09.14},
 }
 
+@Article{Lyle2006,
+  author    = {Lyle, E.},
+  title     = {Narrative Form and the Structure of Myth},
+  journal   = {Folklore},
+  year      = {2006},
+  volume    = {33},
+  pages     = {59-70},
+  doi       = {10.7592/fejf2006.33.lyle},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+}
+
 @Book{Lyle2012,
   title     = {Ten Gods: A New Approach to Defining the Mythological Structures of the Indo-Europeans},
   publisher = {Cambridge Scholars Publishing},
@@ -39787,6 +39895,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2022.08.30},
   url       = {https://www.cambridgescholars.com/product/978-1-4438-4156-6},
+}
+
+@Book{Lyle2018,
+  title     = {Celtic Myth in the 21st Century: The Gods and their Stories in a Global Perspective},
+  publisher = {University of Wales Press},
+  year      = {2018},
+  author    = {Lyle, E.},
+  series    = {New Approaches to Celtic Religion and Mythology},
+  doi       = {10.2307/jj.14491648},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
 }
 
 @Book{Lynch1998,
@@ -40141,9 +40260,12 @@ https://hkim1596.github.io/shakespearean_character_network},
   title     = {Quantifying the role of supernatural entities and the effect of missing data in Irish sagas},
   journal   = {Condensed Matter Physics},
   year      = {2024},
+  volume    = {27},
+  number    = {3},
+  pages     = {33803},
+  doi       = {10.5488/cmp.27.33803},
   owner     = {Vincent},
   timestamp = {2024.09.20},
-  url       = {https://arxiv.org/abs/2409.12071},
 }
 
 @Article{MacEachren2005,
@@ -40743,6 +40865,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1037/rev0000283},
   owner     = {Vincent},
   timestamp = {2023.08.12},
+}
+
+@Article{Mannion2022,
+  author    = {Mannion, S. and Mac Carron, P.},
+  title     = {A robust method for fitting degree distributions of complex networks},
+  journal   = {Journal of Complex Networks},
+  year      = {2023},
+  volume    = {11},
+  number    = {4},
+  pages     = {cnad023},
+  doi       = {10.1093/comnet/cnad023},
+  owner     = {Vincent},
+  timestamp = {2022.12.14},
 }
 
 @Book{Manovich2001,
@@ -44433,6 +44568,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   url       = {https://newleftreview.org/issues/ii124/articles/franco-moretti-the-roads-to-rome},
 }
 
+@Book{Morford1999,
+  title     = {Classical Mythology},
+  publisher = {Oxford University Press},
+  year      = {1999},
+  author    = {Morford, M. P. and Lenardon, R. J.},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://global.oup.com/academic/product/classical-mythology-9780197653920},
+}
+
 @InProceedings{Morgado2022,
   author    = {Morgado, I. and Moreno-Jiménez, L.-G. and Torres-Moreno, J.-M. and Wedemann, Roseli},
   title     = {{MegaLitePT}: A Corpus of Literature in Portuguese for NLP},
@@ -45444,6 +45589,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.5244/c.31.107},
   owner     = {Vincent},
   timestamp = {2021.10.04},
+}
+
+@Article{Nagy1986,
+  author    = {Nagy, J. F.},
+  title     = {Orality in medieval Irish narrative: An overview},
+  journal   = {Oral tradition},
+  year      = {1986},
+  volume    = {1},
+  number    = {2},
+  pages     = {272-301},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://journal.oraltradition.org/wp-content/uploads/files/articles/1ii/4_nagy.pdf},
 }
 
 @Book{Nagy2015,
@@ -47161,6 +47319,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books?id=ncVmAAAAMAAJ},
+}
+
+@Book{OCroinin2016,
+  title     = {Early Medieval Ireland 400-1200},
+  publisher = {Routledge},
+  year      = {2016},
+  author    = {O Croinin, D.},
+  doi       = {10.4324/9781315558783},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
 }
 
 @InCollection{ODay2004,
@@ -48891,6 +49059,17 @@ https://hkim1596.github.io/shakespearean_character_network},
   url          = {https://networks.skewed.de/},
   owner        = {Vincent},
   timestamp    = {2023.02.25},
+}
+
+@Book{Peixoto2021a,
+  title     = {Descriptive vs. Inferential Community Detection in Networks},
+  publisher = {Cambridge University Press},
+  year      = {2023},
+  author    = {Peixoto, T. P.},
+  series    = {Elements in the Structure and Dynamics of Complex Networks},
+  doi       = {10.1017/9781009118897},
+  owner     = {Vincent},
+  timestamp = {2021.12.02},
 }
 
 @Article{Pelossof2010,
@@ -54864,6 +55043,19 @@ https://hkim1596.github.io/shakespearean_character_network},
   timestamp = {2019.04.09},
 }
 
+@Article{SanMiguel2023,
+  author        = {San Miguel, M.},
+  title         = {Frontiers in Complex Systems},
+  journal       = {Frontiers in Complex Systems},
+  year          = {2023},
+  volume        = {1},
+  pages         = {1080801},
+  __markedentry = {[Vincent:]},
+  doi           = {10.3389/fcpxs.2023.1080801},
+  owner         = {Vincent},
+  timestamp     = {2023.02.18},
+}
+
 @Article{SantaMaria2020,
   author    = {Santa María, M. T. and Calvo Tello, J. and Jiménez, C. M.},
   title     = {¿Existe correlación entre importancia y centralidad? Evaluación de personajes con redes sociales en obras teatrales de la Edad de Plata},
@@ -56090,6 +56282,18 @@ https://hkim1596.github.io/shakespearean_character_network},
   doi       = {10.1109/icdar.2009.194},
   owner     = {Vincent},
   timestamp = {2022.07.09},
+}
+
+@Article{Schwartz2021,
+  author    = {Schwartz, G. A.},
+  title     = {Complex networks reveal emergent interdisciplinary knowledge in Wikipedia},
+  journal   = {Humanities and Social Sciences Communications},
+  year      = {2021},
+  volume    = {8},
+  pages     = {127},
+  doi       = {10.1057/s41599-021-00801-1},
+  owner     = {Vincent},
+  timestamp = {2021.05.29},
 }
 
 @InCollection{Schweickert2007,
@@ -66232,6 +66436,16 @@ https://hkim1596.github.io/shakespearean_character_network},
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://www.dukeupress.edu/on-the-wire},
+}
+
+@Book{Williams2017,
+  title     = {Ireland's Immortals: A History of the Gods of Irish Myth},
+  publisher = {Princeton University Press},
+  year      = {2017},
+  author    = {Williams, M.},
+  owner     = {Vincent},
+  timestamp = {2025.01.10},
+  url       = {https://press.princeton.edu/books/paperback/9780691183046/irelands-immortals},
 }
 
 @InProceedings{Williams2018,
